trying to fix overlap of nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,8 @@
 
 .navbar > .active {
   background-color:rgb(0, 123, 255);
-  border-bottom-left-radius:4px;
-  border-bottom-right-radius:4px;
+  /* border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px; */
   border-top-left-radius:4px;
   border-top-right-radius:4px;
   box-sizing:border-box;
