--- a/src/Containers/AboutMe/AboutMe.css
+++ b/src/Containers/AboutMe/AboutMe.css
@@ -1,6 +1,6 @@
 .about-section {
-    padding-top: 5vh;
+    padding-top: 7vh;
     /* padding-bottom: 5vh; */
     margin-bottom: 0px;
-    margin-top: 0px;
+    margin-top: 10px;
 }
